--- a/kelas/templates/base.html
+++ b/kelas/templates/base.html
@@ -52,7 +52,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="/#hero">About</a></li>
+          <li><a class="nav-link scrollto active" href="/base">About</a></li>
           <li><a class="nav-link scrollto" href="/#roadmap">Roadmap</a></li>
           <li><a class="nav-link scrollto" href="/#detail">Details</a></li>
           <li class="dropdown"><a href="/#team"><span>Teams</span> <i class="bi bi-chevron-down"></i></a>
